Fix issue with bookmark displayed poorly on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -92,4 +92,7 @@ border: 3px solid #b3b3b3;
     #right-dropdown {
         text-align: right;
     }
+    #right-element {
+        text-align: right;
+    }
 }
